src/modules/CartPage/components/ProductCart/ProductCart.module.scss
@import "../../../../styles/mixins";
@import "../../../../styles/typography";
@import "../../../../styles/colors";

.cartProductContainer {
  grid-column: 1/-1;

  display: flex;
  gap: 1.6rem;
  flex-direction: column;
  padding: 1.6rem;
  border: 1px solid var(--color-elements);
  border-radius: 1.6rem;
  background-color: var(--color-product-card-background);
  height: max-content;

  @include on-tablet {
    gap: 2.4rem;
    flex-direction: row;
    padding: 2.4rem;
    align-items: center;
    justify-content: space-between;
    transition: box-shadow $transition-duration ease-out;

    &:hover {
      box-shadow: 0 0 2px 0 $color-btn-shadow;
    }
  }

  @include on-m-desktop {
    grid-column: 1/ span 16;
  }

}

[data-theme = 'light'] .cartProductContainer {
  --color-product-card-background: #fff;
}

[data-theme = 'dark'] .cartProductContainer {
  --color-product-card-background: #161827;
}

.topWrapper {
  display: flex;
  gap: 1.6rem;

  @include on-tablet {
    gap: 2.4rem;
  }
}

.productContainer {
  display: flex;
  gap: 1.6rem;
  align-items: center;

  text-decoration: none;

  @include on-tablet {
    gap: 2.4rem;
  }
}

.btnClose {
  background-color: transparent;
  border: none;
  text-align: center;
  align-self: center;
  height: 1.6rem;
  width: 1.6rem;

  fill: var(--color-icons);
  cursor: pointer;

  @include on-tablet {
    &:hover {
      fill: var(--color-primary);
    }
  }
}

.imgContainer {
  box-sizing: border-box;
  height: 8rem;
  width: 8rem;
  padding: 0.7rem;

  & img {
    height: 100%;
  }
}

.productName {
  @extend %text-body;

  color: var(--color-primary);
}

.bottomWrapper {
  display: flex;
  gap: 2.4rem;
  justify-content: space-between;
}

.counterContainer {
  display: flex;
  align-items: center;
}

.btnCounter {
  display: inline-block;

  width: 3.2rem;
  height: 3.2rem;
  border-radius: 50%;
  border: 1px solid var(--color-icons);
  background-color: transparent;
  cursor: pointer;
  text-align: center;
  fill: var(--color-primary);

  & svg {
    height: 100%;
  }

  @include on-tablet {
    &:hover {
      border: 1px solid var(--color-primary);
    }
  }

  &::after {
    content: '';
    height: 1.6rem;
    width: 1.6rem;
    background-color: var(--color-primary);
  }

  &:disabled {
    fill: var(--color-icons);
    border: 1px solid var(--color-elements);
    cursor: auto;
  }
}

.textCounter {
  @extend %text-body;

  color: var(--color-primary);
  display: inline-block;
  min-width: max-content;
  width: 3.2rem;
  text-align: center;
}

.priceForProduct {
  @extend %h3;

  color: var(--color-primary);
  display: inline-block;
  text-align: right;

  @include on-tablet {
    width: 8rem;
  }
}

